# demand_planning_ETL

./: LICENSE  README.md  pyproject.toml
src/demand_planning_nikdante.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/demand_planning_nikdante/workflows/: email.py
